# glint-case

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: Ponds_and_Lakes.json:Zone.Identifier  dams.geojson
scripts/: clean.sh
src/: S2A_18TYL_20220825_0_L2A_B02.tif  S2A_18TYL_20220825_0_L2A_B03.tif  S2A_18TYL_20220825_0_L2A_B04.tif  S2B_18TYL_20220820_0_L2A_B02.tif  S2B_18TYL_20220820_0_L2A_B03.tif  S2B_18TYL_20220820_0_L2A_B04.tif  S2B_18TYM_20220820_0_L2A_B02.tif  S2B_18TYM_20220820_0_L2A_B03.tif  S2B_18TYM_20220820_0_L2A_B04.tif  S2B_19TBG_20220820_0_L2A_B02.tif  S2B_19TBG_20220820_0_L2A_B03.tif  S2B_19TBG_20220820_0_L2A_B04.tif  largest_body.py  script.py  test.tif  utils.py
