[tool.poetry]
name = "glint solar case"
version = "0.1.0"
description = ""
authors = ["john"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sat-search = "^0.3.0"
geopandas = "^0.12.2"
numpy = "^1.23.5"
shapely = "^1.8.5.post1"
rasterio = "^1.3.4"
rioxarray = "^0.13.1"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
